자기소개를 빈칸으로 수정했을 때 변경되지 않던 오류 해결 프로필에 변경사항이 있을 때만 제출 가능하게 textarea 동적으로 높이 조절

--- a/src/main/reactjs/src/pages/mypage/Profile.module.css
+++ b/src/main/reactjs/src/pages/mypage/Profile.module.css
@@ -63,7 +63,7 @@
 
 .bio{
   font-family: inherit;
-  font-size: inherit;
+  font-size: 15px;
   /* margin-top: 3px; */
   margin: 3px 0 0 0;
   white-space: pre-wrap;
