건강 점수 코멘트 추가

--- a/src/main/reactjs/src/App.css
+++ b/src/main/reactjs/src/App.css
@@ -18,3 +18,15 @@ input:-webkit-autofill:active {
 input:focus, textarea, select:focus, option:focus, button:focus{
   outline:none;
 }
+
+.DashCard-undefined{
+  background-color: transparent !important;
+}
+
+.DashCard-undefined{
+  margin-top: 0 !important;
+}
+
+.chart-skills-undefined{
+  margin-top: 0 !important;
+}
