--- a/src/main/reactjs/src/pages/report/Report.module.css
+++ b/src/main/reactjs/src/pages/report/Report.module.css
@@ -9,18 +9,18 @@
 }
 
 .subtitle{
-  font-size: 20px;
+  font-size: 19px;
   font-weight: 600;
 }
 
 .health_box{
-  margin-top: 30px;
+  margin-top: 20px;
 }
 
 .chart_wrap{
   text-align: center;
   margin: 0 auto;
-  margin-top: 20px;
+  /* margin-top: 20px; */
   display: flex;
   justify-content: center;
 }
@@ -28,11 +28,18 @@
 .chart_wrap > div{
   /* margin: 0;
   width: 100%; */
-  padding: 5px 40px 40px 40px;
+  padding: 5px 40px 30px 40px;
+}
+
+.comment{
+  background-color: rgb(245, 245, 245);
+  padding: 15px 20px;
+  border-radius: 12px;
+  font-size: 15px;
 }
 
 .weight_box{
-  margin-top: 50px;
+  margin-top: 40px;
 }
 
 .graph_wrap{
