--- a/src/main/reactjs/src/pages/settings/Settings.module.css
+++ b/src/main/reactjs/src/pages/settings/Settings.module.css
@@ -18,8 +18,11 @@
   width: 300px;
   padding: 20px;
   cursor: pointer;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .btn_item:not(:last-child){
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid rgb(230, 230, 230);
 }
