--- a/src/main/reactjs/src/pages/login/Login.module.css
+++ b/src/main/reactjs/src/pages/login/Login.module.css
@@ -52,10 +52,15 @@
   justify-content: center;
 }
 
-.btn_wrap > div{
-  margin: 0 20px;
+.btn_wrap > span{
   font-size: 14px;
-  font-weight: 500;
+}
+
+.btn_wrap .join_btn{
+  /* margin: 0 20px; */
+  font-size: 14px;
+  font-weight: 600;
+  color: #4bc9b2;
 }
 
 /* Home.js */
