--- a/src/main/reactjs/src/pages/login/Login.module.css
+++ b/src/main/reactjs/src/pages/login/Login.module.css
@@ -24,11 +24,11 @@
 
 .input{
   border: none;
-  border-bottom: 1px solid #86dbcb;
+  border-bottom: 1px solid #e0e0e0;
   width: 100%;
   height: 40px;
   border-radius: 0;
-  padding: 10px;
+  padding: 15px;
   margin-top: 10px;
 }
 
@@ -40,9 +40,9 @@
 .login_btn{
   border: none;
   background-color: #86dbcb;
-  width: 80px;
+  width: 100%;
   height: 35px;
-  border-radius: 10px;
+  border-radius: 6px;
   color: white;
   font-weight: 600;
 }
