--- a/src/main/reactjs/src/pages/mypage/ProfileEdit.module.css
+++ b/src/main/reactjs/src/pages/mypage/ProfileEdit.module.css
@@ -70,6 +70,7 @@ input:focus, textarea{
   font-weight: 600;
 }
 
+/* 소개 */
 .bio_box{
   margin-top: 20px;
 }
@@ -82,6 +83,40 @@ input:focus, textarea{
   border-radius: 8px;
   resize: none;
   margin-top: 5px;
+}
+
+/* 관심사 */
+.hobby_box{
+  margin-top: 20px;
+}
+
+.hobby_btn_wrap{
+  display: flex;
+  margin-top: 10px;
+  flex-wrap: wrap;
+}
+
+.hobby_btn{
+  /* border: 1px solid lightgray;
+  padding: 3px 8px;
+  border-radius: 15px;
+  font-size: 15px;
+  margin-right: 6px;
+  margin-bottom: 6px; */
+  border: 1px solid lightgray;
+  padding: 4px 10px;
+  border-radius: 16px;
+  /* font-size: 15px; */
+  margin-right: 7px;
+  margin-bottom: 8px;
+}
+
+.selected{
+  border: 1px solid #86dbcb;
+  /* border: none; */
+  background-color: #86dbcb;
+  color: white;
+  font-weight: 600;
 }
 
 /* MenuTitle.js */
