프로필 페이지에 관심사 목록 표시

--- a/src/main/reactjs/src/pages/mypage/ProfileEdit.module.css
+++ b/src/main/reactjs/src/pages/mypage/ProfileEdit.module.css
@@ -106,7 +106,7 @@ input:focus, textarea{
   border: 1px solid lightgray;
   padding: 4px 10px;
   border-radius: 16px;
-  /* font-size: 15px; */
+  font-size: 15px;
   margin-right: 7px;
   margin-bottom: 8px;
 }
