--- a/src/main/reactjs/src/pages/mypage/Profile.module.css
+++ b/src/main/reactjs/src/pages/mypage/Profile.module.css
@@ -182,3 +182,12 @@
   width: 100%;
   height: 100%;
 }
+
+.no_content{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 60vh;
+  /* height: -webkit-fill-available; */
+  color: gray;
+}
