챌린지 목록에서 카테고리 필터링 기능 추가

--- a/src/main/reactjs/src/components/Components.module.css
+++ b/src/main/reactjs/src/components/Components.module.css
@@ -138,7 +138,9 @@
 .challenge .like{
   cursor: pointer;
   padding: 3px 2px;
-  font-size: 18px;
+  font-size: 20px;
+  z-index: 99;
+  position: absolute;
 }
 
 .challenge .like_off{
