--- a/src/main/reactjs/src/pages/user/user.module.css
+++ b/src/main/reactjs/src/pages/user/user.module.css
@@ -95,10 +95,46 @@
 
 .bio{
   font-family: inherit;
-  font-size: inherit;
+  font-size: 15px;
   /* margin-top: 3px; */
   margin: 3px 0 0 0;
   white-space: pre-wrap;
+}
+
+/* 관심사 */
+.hobby_box{
+  margin-top: 20px;
+}
+
+.hobby_btn_wrap{
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 5px;
+  padding: 0 20px;
+}
+
+.hobby_btn{
+  /* border: 1px solid lightgray;
+  padding: 3px 8px;
+  border-radius: 15px;
+  font-size: 15px;
+  margin-right: 6px;
+  margin-bottom: 6px; */
+  border: none;
+  background-color: rgb(243, 243, 243);
+  padding: 4px 10px;
+  border-radius: 16px;
+  font-size: 15px;
+  margin-right: 7px;
+  margin-bottom: 8px;
+}
+
+.selected{
+  border: 1px solid #86dbcb;
+  /* border: none; */
+  background-color: #86dbcb;
+  color: white;
+  font-weight: 600;
 }
 
 .tabs{
